[metadata]
name         = hahm-mqtt
version      = 2022.11.0
author       = SukramJ
author_email = sukramj@icloud.com
license      = MIT License
platforms    = any
description  = Homematic interface for Home Assistant on Python 3 for MQTT.
long_description = file: README.md
long_description_content_type = text/markdown
keywords     = home, assistant, homematic
url = https://github.com/danielperna84/hahomematic
project_urls =
    Source Code = https://github.com/sukramj/hahm-mqtt
    Bug Reports = https://github.com/sukramj/hahm-mqtt/issues
    Docs: Dev   = https://github.com/sukramj/hahm-mqtt
classifier =
    Development Status :: 4 - Beta
    Intended Audience :: End Users/Desktop
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Home Automation

[options]
packages = find:
zip_safe = False
include_package_data = True
python_requires = >=3.9.0
install_requires =
    aiohttp>=3.8.1
    voluptuous>=0.13.1
    python-slugify>=4.0.1

[options.packages.find]
include =
    hahm-mqtt*
exclude =
    tests, tests.*, dist, build

[options.package_data]
hahm-mqtt = py.typed

[options.entry_points]
console_scripts =
    hahm-mqtt = hahm-mqtt.hmcli:main

[bdist_wheel]
universal = true

[flake8]
exclude = .venv,.git,.tox,docs,venv,bin,lib,deps,build
max-complexity = 25
doctests = True
# To work with Black
# E501: line too long
# W503: Line break occurred before a binary operator
# E203: Whitespace before ':'
# D202 No blank lines allowed after function docstring
# W504 line break after binary operator
ignore =
    E501,
    W503,
    E203,
    D202,
    W504
noqa-require-code = True
